--- a/cartac_web/public/css/admin.css
+++ b/cartac_web/public/css/admin.css
@@ -140,6 +140,7 @@ img.user-image {
 
 .menu-horizontal {
     min-height: calc(100vh - 91px);
+    height: 100%;
     background: #18191b;
     padding-top: 20px;
     border-top: var(--BtnSecondary) solid 1px;
@@ -161,7 +162,8 @@ img.user-image {
     transition: all 0.5s;
 }
 
-.menu-horizontal a:hover {
+.menu-horizontal a:hover,
+.menu-horizontal a.activo {
     text-decoration: none;
     background: var(--BtnSecondary);
 }
@@ -206,4 +208,64 @@ img.user-image {
     height: 100%;
     vertical-align: top;
     margin-left: 5px;
+}
+
+
+/*Contenedor*/
+
+.contenedor {
+    min-height: calc(100vh - 91px);
+    padding: 20px 25px;
+}
+
+.nav-indicador {
+    padding-bottom: 20px;
+}
+
+.nav-indicador a {
+    color: #585a5f;
+}
+
+
+/*Maps*/
+
+#map {
+    width: 100%;
+    height: 400px;
+}
+
+a.modificar,
+a.eliminar {
+    font-size: 20px;
+}
+
+
+/*Tables*/
+
+.dataTables_wrapper .dataTables_paginate .paginate_button,
+.dataTables_wrapper .dataTables_paginate .paginate_button:hover,
+.dataTables_wrapper .dataTables_paginate .paginate_button:active {
+    color: white !important;
+    border: 0px;
+    background: none;
+    box-shadow: none;
+    padding: 0;
+}
+
+select.custom-select.custom-select-sm.form-control.form-control-sm {
+    width: 60px;
+    margin: 0 5px;
+}
+
+table.dataTable thead th,
+table.dataTable thead td,
+table.dataTable.no-footer {
+    border: 0px
+}
+
+
+/*Categoria*/
+
+img.categoria {
+    max-width: 50px;
 }
