--- a/cartac_web/public/css/admin.css
+++ b/cartac_web/public/css/admin.css
@@ -321,3 +321,9 @@ img.categoria {
 .rechazar.oculto {
     display: none;
 }
+
+.modal-image .modal-body img {
+    max-width: 100%;
+    margin: auto;
+    display: block;
+}
